--- a/contactus.html
+++ b/contactus.html
@@ -12,18 +12,20 @@
     <title>KeshiaStyle Reseller</title>
 </head>
 <body>
+    
 <!-- header -->
 <header>
-    <div class="container">
-        <div class="row">
-            <div class="col-4 col-sm-3 col-md-2 align-self-center">
-                <a href="keshiastye.html"><img src="img/images.png" class="img-fluid" /></a>
-            </div>
-            <div class="col">
-                <h1>KeshiaStyle</h1>
-                <h2>A new way to shop</h2>
+    <div class="text-center">
+        <div class="container">
+        <div class="row justify-content-center">
+            <div class="col-auto">
+                <a href="keshiastye.html">
+                <img src="img/images.png" class="img-fluid" />
+                </a>
             </div>
         </div>
+        <h1>Keshia Style</h1>
+        <h2>A new way to shop</h2>
     </div>
 </header>
 
