--- a/keshiastye.html
+++ b/keshiastye.html
@@ -16,12 +16,17 @@
 
 <!-- header -->
 <header>
-    <div class="container">
-        <div class="row">
-            <div class="col-4 col-sm-3 col-md-2 align-self-center">
+    <div class="text-center">
+        <div class="container">
+        <div class="row justify-content-center">
+            <div class="col-auto">
+                <a href="keshiastye.html">
                 <img src="img/images.png" class="img-fluid" />
+                </a>
             </div>
         </div>
+        <h1>Keshia Style</h1>
+        <h2>A new way to shop</h2>
     </div>
 </header>
 
@@ -61,7 +66,7 @@
 <!-- general text -->
 
 <div class="container">
-    <h2>Welcome to my Store!</h2>
+    <h2>Welcome to your closet</h2>
     <p>Everyone can find their style with Keshia Style.</p>
     <h3>Top Finds</h3>
     <p>Explore our latest collection of clothing items, including:</p>
@@ -73,6 +78,71 @@
         <li>Accessories</li>
     </ul>
 </div>
+   <!-- main content -->
+   <main class="container">
+
+    <!-- carousel -->
+    <section class="row row-content">
+        <div class="col-md-8 mx-auto">
+            <div id="homeCarousel" class="carousel slide" data-bs-ride="carousel">
+                <div class="carousel-indicators">
+                    <button type="button" data-bs-target="#homeCarousel" data-bs-slide-to="0" class="active"></button>
+                    <button type="button" data-bs-target="#homeCarousel" data-bs-slide-to="1"></button>
+                    <button type="button" data-bs-target="#homeCarousel" data-bs-slide-to="2"></button>
+                </div>
+                <div class="carousel-inner">
+                    <div class="carousel-item active">
+                        <img class="d-block w-100" src="img/breadcrumb-trail.jpg" alt="Breadcrumb Trail Campground" />
+                        <div class="carousel-caption">
+                            <h3>Breadcrumb Trail Campground</h3>
+                            <p class="d-none d-sm-block">Let Nucamp be your guide to this off-the-beaten-path, hike-in-only campground.</p>
+                        </div>
+                    </div>
+                    <div class="carousel-item">
+                        <img class="d-block w-100" src="img/react-lake.jpg" alt="React Lake Campground" />
+                        <div class="carousel-caption">
+                            <h3>React Lake Campground</h3>
+                            <p class="d-none d-sm-block">Nestled in the foothills of the Chrome Mountains, this campground on the shores of the pristine React Lake is a favorite for fly fishers.</p>
+                        </div>
+                    </div>
+                    <div class="carousel-item">
+                        <img class="d-block w-100" src="img/chrome-river.jpg" alt="Chrome River Campground" />
+                        <div class="carousel-caption">
+                            <h3>Chrome River Campground</h3>
+                            <p class="d-none d-sm-block">Spend a few sunny days and starry nights beneath a canopy of old-growth firs at this enchanting spot by the Chrome River.</p>
+                        </div>
+                    </div>
+                </div>
+                <a class="carousel-control-prev" href="#homeCarousel" role="button" data-bs-slide="prev">
+                    <span class="carousel-control-prev-icon"></span>
+                    <span class="sr-only">Previous</span>
+                </a>
+                <a class="carousel-control-next" href="#homeCarousel" role="button" data-bs-slide="next">
+                    <span class="carousel-control-next-icon"></span>
+                    <span class="sr-only">Next</span>
+                </a>
+                <div class="btn-group" id="carouselButton">
+<button class="btn btn-danger btn-sm" id="carouselPause">
+    <i class="fa-solid fa-pause"></i>
+</button>
+<button class="btn btn-danger btn-sm" id="carouselPlay">
+    <i class="fa-solid fa-play"></i>
+</button>
+<div class="btn-group" id="carouselButton">
+    <button class="btn btn-danger btn-sm" id="carouselPause">
+        <i class="fa-solid fa-pause"></i>
+    </button>
+    <button class="btn btn-danger btn-sm" id="carouselPlay">
+        <i class="fa-solid fa-play"></i>
+    </button>
+</div>
+</div>
+            </div>
+        </div>
+    </section>
+
+
+
 
 <!-- footer -->
 <footer>
