--- a/keshiastye.html
+++ b/keshiastye.html
@@ -90,37 +90,43 @@
                     <button type="button" data-bs-target="#homeCarousel" data-bs-slide-to="1"></button>
                     <button type="button" data-bs-target="#homeCarousel" data-bs-slide-to="2"></button>
                 </div>
+
                 <div class="carousel-inner">
                     <div class="carousel-item active">
-                        <img class="d-block w-100" src="img/breadcrumb-trail.jpg" alt="Breadcrumb Trail Campground" />
+                        <img class="d-block w-100" src="img/weddingdress.jpg" alt="Two Piece Wedding Dress" />
                         <div class="carousel-caption">
-                            <h3>Breadcrumb Trail Campground</h3>
-                            <p class="d-none d-sm-block">Let Nucamp be your guide to this off-the-beaten-path, hike-in-only campground.</p>
+                            <h3>Two Piece Wedding Dress</h3>
+                            <p class="d-none d-sm-block">Great for an upcoming wedding</p>
                         </div>
                     </div>
+
                     <div class="carousel-item">
-                        <img class="d-block w-100" src="img/react-lake.jpg" alt="React Lake Campground" />
+                        <img class="d-block w-100" src="img/weddingdress2.jpg" alt="Long Wedding Dress" />
                         <div class="carousel-caption">
-                            <h3>React Lake Campground</h3>
+                            <h3>Long White Dress</h3>
                             <p class="d-none d-sm-block">Nestled in the foothills of the Chrome Mountains, this campground on the shores of the pristine React Lake is a favorite for fly fishers.</p>
                         </div>
                     </div>
+
                     <div class="carousel-item">
-                        <img class="d-block w-100" src="img/chrome-river.jpg" alt="Chrome River Campground" />
+                        <img class="d-block w-100" src="img/jacket.jpg" alt="Cape Jacket" />
                         <div class="carousel-caption">
-                            <h3>Chrome River Campground</h3>
-                            <p class="d-none d-sm-block">Spend a few sunny days and starry nights beneath a canopy of old-growth firs at this enchanting spot by the Chrome River.</p>
+                            <h3>Vintage Jacket</h3>
+                            <p class="d-none d-sm-block">Enjoy this vintage piece to work or out to lunch</p>
                         </div>
                     </div>
                 </div>
+
                 <a class="carousel-control-prev" href="#homeCarousel" role="button" data-bs-slide="prev">
                     <span class="carousel-control-prev-icon"></span>
                     <span class="sr-only">Previous</span>
                 </a>
+
                 <a class="carousel-control-next" href="#homeCarousel" role="button" data-bs-slide="next">
                     <span class="carousel-control-next-icon"></span>
                     <span class="sr-only">Next</span>
                 </a>
+                
                 <div class="btn-group" id="carouselButton">
 <button class="btn btn-danger btn-sm" id="carouselPause">
     <i class="fa-solid fa-pause"></i>
@@ -128,14 +134,6 @@
 <button class="btn btn-danger btn-sm" id="carouselPlay">
     <i class="fa-solid fa-play"></i>
 </button>
-<div class="btn-group" id="carouselButton">
-    <button class="btn btn-danger btn-sm" id="carouselPause">
-        <i class="fa-solid fa-pause"></i>
-    </button>
-    <button class="btn btn-danger btn-sm" id="carouselPlay">
-        <i class="fa-solid fa-play"></i>
-    </button>
-</div>
 </div>
             </div>
         </div>
