--- a/contactus.html
+++ b/contactus.html
@@ -12,7 +12,7 @@
     <title>KeshiaStyle Reseller</title>
 </head>
 <body>
-    
+
 <!-- header -->
 <header>
     <div class="text-center">
@@ -172,8 +172,7 @@
 </footer>
 
   <!-- Bootstrap JavaScript plugins -->
-<script src="node_modules/jquery/dist/jquery.min.js"></script>
-<script src="node_modules/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 
 <script src="js/keshiastyle.js"></script>
 
