--- a/keshiastye.html
+++ b/keshiastye.html
@@ -43,7 +43,7 @@
         </button>
         <div class="collapse navbar-collapse" id="keshiaStylebar">
             <ul class="navbar-nav">
-                <li class="nav-item"><a class="nav-link active" href="keshiastye.html"><i class="fas fa-home fa-lg"></i>Home</a></li>
+                <li class="nav-item"><a class="nav-link active" href="#"><i class="fas fa-home fa-lg"></i>Home</a></li>
                 <li class="nav-item"><a class="nav-link" href="aboutus.html"><i class="fas fa-info fa-lg"></i>About</a></li>
                 <li class="nav-item"><a class="nav-link" href="products.html"><i class="fas fa-list fa-lg"></i>Products</a></li>
                 <li class="nav-item"><a class="nav-link" href="contactus.html"><i class="fas fa-address-card fa-lg"></i>Contact</a></li>
@@ -83,7 +83,7 @@
 
     <!-- carousel -->
     <section class="row row-content">
-        <div class="col-md-8 mx-auto">
+        <div class="col-md-4 mx-auto">
             <div id="homeCarousel" class="carousel slide" data-bs-ride="carousel">
                 <div class="carousel-indicators">
                     <button type="button" data-bs-target="#homeCarousel" data-bs-slide-to="0" class="active"></button>
@@ -104,7 +104,7 @@
                         <img class="d-block w-100" src="img/weddingdress2.jpg" alt="Long Wedding Dress" />
                         <div class="carousel-caption">
                             <h3>Long White Dress</h3>
-                            <p class="d-none d-sm-block">Nestled in the foothills of the Chrome Mountains, this campground on the shores of the pristine React Lake is a favorite for fly fishers.</p>
+                            <p class="d-none d-sm-block">White dress</p>
                         </div>
                     </div>
 
@@ -117,17 +117,19 @@
                     </div>
                 </div>
 
-                <a class="carousel-control-prev" href="#homeCarousel" role="button" data-bs-slide="prev">
+                <button class="carousel-control-prev" type="button" data-bs-target="#homeCarousel" data-bs-slide="prev">
                     <span class="carousel-control-prev-icon"></span>
-                    <span class="sr-only">Previous</span>
-                </a>
-
-                <a class="carousel-control-next" href="#homeCarousel" role="button" data-bs-slide="next">
-                    <span class="carousel-control-next-icon"></span>
-                    <span class="sr-only">Next</span>
-                </a>
+                    <span class="visually-hidden">Previous</span>
+                </button>
                 
+                <button class="carousel-control-next" type="button" data-bs-target="#homeCarousel" data-bs-slide="next">
+                    <span class="carousel-control-next-icon"></span>
+                    <span class="visually-hidden">Next</span>
+                </button>
+                
+
                 <div class="btn-group" id="carouselButton">
+
 <button class="btn btn-danger btn-sm" id="carouselPause">
     <i class="fa-solid fa-pause"></i>
 </button>
@@ -171,8 +173,7 @@
 </footer>
 
 <!-- Bootstrap JavaScript plugins -->
-<script src="node_modules/jquery/dist/jquery.min.js"></script>
-<script src="node_modules/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 
 <script src="js/keshiastyle.js"></script>
 
