--- a/keshiastye.html
+++ b/keshiastye.html
@@ -43,7 +43,7 @@
         </button>
         <div class="collapse navbar-collapse" id="keshiaStylebar">
             <ul class="navbar-nav">
-                <li class="nav-item"><a class="nav-link active" href="#"><i class="fas fa-home fa-lg"></i>Home</a></li>
+                <li class="nav-item"><a class="nav-link" href="#"><i class="fas fa-home fa-lg"></i>Home</a></li>
                 <li class="nav-item"><a class="nav-link" href="aboutus.html"><i class="fas fa-info fa-lg"></i>About</a></li>
                 <li class="nav-item"><a class="nav-link" href="products.html"><i class="fas fa-list fa-lg"></i>Products</a></li>
                 <li class="nav-item"><a class="nav-link" href="contactus.html"><i class="fas fa-address-card fa-lg"></i>Contact</a></li>
